Disabled StaticClassLoader as it was causing interacting issues, will be looked into.
Changed gamepack loading to use cached gamepacks and ver checking.

Made Configurations file